[package]
name = "ukulele_audio_asset"
version = "0.1.0"
authors = ["stephaneworkspace <s.bressani@bluewin.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chartgeneratorsvg = { git = "ssh://git@github.com/stephaneworkspace/chartgeneratorsvg.git" }
ukulele-midi = { git = "https://github.com/stephaneworkspace/ukulele-midi.git", branch = "main"}
libc = "0.2"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
#pkg-config = "0.3"
